@@ -23,12 +23,11 @@
         <jena.version>2.13.0</jena.version>
         <exec-maven-version>1.3.2</exec-maven-version>
         <!-- /end managed versions -->
-        <jvm.args>-Xms256m -Xmx3072m -XX:PermSize=128m
-            -XX:MaxPermSize=512m</jvm.args>
+        <jvm.args>-Xms256m -Xmx3072m</jvm.args>
         <generated.schema.dir>target/generated/db</generated.schema.dir>
         <generated.schema.file>schema.sql</generated.schema.file>
         <wro4j.version>1.7.7</wro4j.version>
-        <jetty.version>8.1.11.v20130520</jetty.version>
+        <jetty.version>9.2.7.v20150116</jetty.version>
         <jetty.port>8080</jetty.port>
         <jetty.ssl.port>8443</jetty.ssl.port>
         <jetty.stop.port>12919</jetty.stop.port>
@@ -1690,33 +1689,78 @@
                     </execution>
                  </executions>
              </plugin>
+             
             <plugin>
-                <groupId>org.mortbay.jetty</groupId>
+                <groupId>com.github.eirslett</groupId>
+                <artifactId>frontend-maven-plugin</artifactId>
+                <!-- NB! Set <version> to the latest released version of frontend-maven-plugin, 
+                    like in README.md -->
+                <version>0.0.22</version>
+                <executions>
+                    <execution>
+                        <id>install node and npm</id>
+                        <goals>
+                            <goal>install-node-and-npm</goal>
+                        </goals>
+                        <configuration>
+                            <nodeVersion>v0.10.30</nodeVersion>
+                            <npmVersion>1.4.21</npmVersion>
+
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>npm install</id>
+                        <goals>
+                            <goal>npm</goal>
+                        </goals>
+                        <!-- Optional configuration which provides for running any npm command -->
+                        <configuration>
+                            <arguments>install</arguments>
+                        </configuration>
+                    </execution>
+                    <!-- meed to run npm install bower; npm install grunt -->
+                    <execution>
+                        <id>bower install</id>
+                        <goals>
+                            <goal>bower</goal>
+                        </goals>
+                        <configuration>
+                            <arguments>install</arguments>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
                 <version>${jetty.version}</version>
                 <configuration>
                     <testClassesDirectory>src/test/resources/</testClassesDirectory>
                     <useTestClasspath>${use.test.classpath}</useTestClasspath>
                     <scanIntervalSeconds>10</scanIntervalSeconds>
-                    <contextXml>src/main/resources/jetty/jetty-context.xml</contextXml>
-                    <connectors>
-                        <connector
-                            implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
-                            <port>${jetty.port}</port>
-                            <maxIdleTime>60000</maxIdleTime>
-                        </connector>
-                        <connector
-                            implementation="org.eclipse.jetty.server.ssl.SslSocketConnector">
-                            <port>${jetty.ssl.port}</port>
-                            <maxIdleTime>60000</maxIdleTime>
-                            <keystore>src/main/resources/jetty/jetty-ssl.keystore</keystore>
-                            <password>jetty6</password>
-                            <keyPassword>jetty6</keyPassword>
-                        </connector>
-                    </connectors>
-                    <!-- <contextPath>/</contextPath> -->
-                    <webDefaultXml>src/main/resources/jetty/webdefault.xml</webDefaultXml>
-                    <scanIntervalSeconds>0</scanIntervalSeconds>
+                    <jettyXml>src/main/resources/jetty/jetty.xml,src/main/resources/jetty/jetty-ssl.xml,src/main/resources/jetty/jetty-https.xml,src/main/resources/jetty/jetty-http.xml</jettyXml>
+                     <contextXml>src/main/resources/jetty/jetty-context.xml</contextXml>
+                     <systemProperties>
+                          <systemProperty>
+                           <name>jetty.ssl.port</name>
+                           <value>${jetty.ssl.port}</value>
+                         </systemProperty>
+                        <systemProperty>
+                            <name>jetty.port</name>
+                            <value>${jetty.port}</value>
+                        </systemProperty>
+                        <systemProperty>
+                            <name>log4j.configuration</name>
+                            <value>file:${basedir}/src/main/resources/log4j.properties</value>
+                        </systemProperty>
+                        <systemProperty>
+                            <name>slf4j</name>
+                            <value>true</value>
+                        </systemProperty>
+                     </systemProperties>
+                     <contextPath>/</contextPath>
+                      <webDefaultXml>src/main/resources/jetty/webdefault.xml</webDefaultXml>
+                     <scanIntervalSeconds>0</scanIntervalSeconds>
                     <stopKey>tdar</stopKey>
                     <webApp>
                         <baseResource
@@ -1731,7 +1775,7 @@
                         <id>start-jetty</id>
                         <phase>pre-integration-test</phase>
                         <goals>
-                            <goal>run</goal>
+                            <goal>start</goal>
                         </goals>
                         <configuration>
                             <scanIntervalSeconds>0</scanIntervalSeconds>
@@ -1747,12 +1791,6 @@
                     </execution>
                 </executions>
             </plugin>
-            <!-- FIXME: disabling this for the interim in favor of using 
-                <filters></filters> in the default profile <plugin> <groupId>org.codehaus.mojo</groupId> 
-                <artifactId>properties-maven-plugin</artifactId> <version>1.0-alpha-2</version> 
-                <executions> <execution> <phase>initialize</phase> <goals> <goal>read-project-properties</goal> 
-                </goals> <configuration> <files> <file>src/main/resources/hibernate.properties</file> 
-                </files> </configuration> </execution> </executions> </plugin> -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -2094,7 +2132,7 @@
                 <!-- For even more secret passwords, encrypt them: http://maven.apache.org/guides/mini/guide-encryption.html -->
                 <application.password>tdardev.crowdpw</application.password>
                 <the.jdbc.password>tdar</the.jdbc.password>
-                <webapp.deploy.dir>/opt/webapps/tdar</webapp.deploy.dir>
+                <webapp.deploy.dir>target/</webapp.deploy.dir>
             </properties>
             <dependencies>
                 <dependency>
